-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.0 Beta1, 6.3, 6.4
-
None
-
753fb963b (dev), a0500da9b (6.10), 3c71bf845 (6.9), 46ef6acc0 (dev), 2b666b99f (6.10), 69f785cd8 (6.9)
QTextStream::setCodec was removed in Qt6.
It was not deprecated in 5.15, see
https://doc.qt.io/qt-5.15/qtextstream.html#setCodec
There is no mention of setCodec in the new documentation, see
https://doc-snapshots.qt.io/qt6-dev/qtextstream.html
There is no mention of QTextStream in the porting guide
https://doc.qt.io/qt-6/portingguide.html
And there is no mention of QTextStream in the changes to Qt Core:
https://doc.qt.io/qt-6/qtcore-changes-qt6.html
Please add a paragraph about the changes to QTextStream to a suitable place.
- resulted from
-
QTBUG-90920 Build GoldenCheetah as QtBluetooth test application with Qt 6
-
- Closed
-
| For Gerrit Dashboard: QTBUG-95325 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 653288,6 | Doc: Add QTextStream::setCodec removal to Qt 6 porting guide | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
| 653293,4 | Doc: Document QTextStream::setCodec removal in Qt 6 changes | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 656013,2 | Doc: Document QTextStream::setCodec removal in Qt 6 changes | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 657939,2 | Doc: Document QTextStream::setCodec removal in Qt 6 changes | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 658523,2 | Doc: Add QTextStream::setCodec removal to Qt 6 porting guide | 6.10 | qt/qtdoc | Status: MERGED | +2 | 0 |
| 658703,2 | Doc: Add QTextStream::setCodec removal to Qt 6 porting guide | 6.9 | qt/qtdoc | Status: MERGED | +2 | 0 |