Doc: Document QTextStream::setCodec removal in Qt 6 changes

Add a paragraph about the removal of QTextStream::setCodec() and the
introduction of setEncoding() in Qt 6.

Pick-to: 6.9
Fixes: QTBUG-95325
Change-Id: I0785dcb493a5dcab83c85e59cb549a998ee25af0
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 753fb963b1a370e3ad1bc49494992d17eeb410f6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>